# distill

./: .env.example  .gitignore  DATA_CARD.md  Dockerfile  MODEL_CARD.md  README.md  RUNBOOK.md  backdate.py  docker-compose.yml  generate_schedule.py  maintenance.py  pyproject.toml  requirements-dev.txt  requirements.txt  schedule.json  start.sh
.claude/: settings.json
data/eval/: base_eval_results.json  comparison_summary.json  sample_sections.json  sft_eval_results.json
demo/: app.py  format.py
extractor/: __init__.py  client.py  config.py  prompt.py
extractor/api/: auth.py  batch.py  guided.py  health.py  main.py  repair.py
extractor/data/: __init__.py  degrade.py  splits.py  teacher.py  tokenize.py  validate.py
extractor/eval/: __init__.py  (+1 more)
scripts/: analyze_alignment_tax.py  audit_app.py  benchmark_guided.py  benchmark_latency.py  benchmark_quantization.py  check_dpo_run.py  check_env.py  check_smoke_test.py  compare_evals.py  compare_models.py  cost_report.py  create_splits.py  eval_base_model.py  eval_sft.py  eval_teacher.py  export_checkpoint.py  fetch_papers.py  generate_dataset.py  generate_preferences.py  ingest_papers.py  inspect_preferences.py  prepare_dataset.py  quantize_awq.py  quantize_gguf.py  report_quantization.py  run_baseline.py  run_demo.py  run_eval_pipeline.py  update_model_card.py  validate_dataset.py
tests/: conftest.py  test_api.py  test_cost.py  test_health.py  test_metrics.py  test_placeholder.py  test_repair.py  test_schema.py
training/: config.py  config_3050.json  config_dpo_3050.json  train_dpo.py  train_sft.py  utils.py
(+7 files in other folders)
